--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                   <th colspan="3" style="text-align:center">Check below what ur number says ?</th>
                 </thead>
                 <tr>
-                  <td>1 - 🐃</td>
+                  <td>1 - neku lekalu ravu ra..</td>
                   <td>2 - 🦁</td>
                   <td>3 - 🐅</td>
                 </tr>
@@ -56,9 +56,9 @@
                   <td>6 - 🐄</td>
                 </tr>
                 <tr>
-                  <td>7 - chota</td>
+                  <td>7 - Short fellow</td>
                   <td>8 - nerd</td>
-                  <td>9 - i Know u got '9', Thu Mota h and tera baap Motaa h..</td>
+                  <td>9 - Warangal ani pinchukunav</td>
                 </tr>
               </table>
             </div>
