--- a/index.html
+++ b/index.html
@@ -43,22 +43,22 @@
             <div class="modal-content">
               <table class="table">
                 <thead  class="thead-dark">
-                  <th colspan="3" style="text-align:center">Check below what ur number says ?</th>
+                  <th colspan="3" style="text-align:center">Check below what ur number says about what i think about u?</th>
                 </thead>
                 <tr>
-                  <td>1 - neku lekalu ravu ra..</td>
-                  <td>2 - 🦁</td>
+                  <td>1 - Learn Maths first..</td>
+                  <td>2 - dumb</td>
                   <td>3 - 🐅</td>
                 </tr>
                 <tr>
-                  <td>4 - 🐮</td>
-                  <td>5 - 🐂</td>
-                  <td>6 - 🐄</td>
+                  <td>4 - ur jokes are not at all funny</td>
+                  <td>5 - u look like a Egg</td>
+                  <td>6 - zombiee</td>
                 </tr>
                 <tr>
                   <td>7 - Short fellow</td>
                   <td>8 - nerd</td>
-                  <td>9 - Warangal ani pinchukunav</td>
+                  <td>9 - No becoming slim in near future..</td>
                 </tr>
               </table>
             </div>
