--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
       <div class="card-header">Thank you for Using this site.</div>
       <div class="card-body">
         <h5 class="card-title">Hope u Like it..</h5>
-        <p class="card-text"><em>Designed and Developed by Haris.</em></p>
+        <p class="card-text"><em>Designed and Developed by Quarantined Guy.</em></p>
       </div>
     </div>
   </footer>
