--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="jumbotron">
       <center>
             <div class="card bg-dark text-white">
-              <img src="circlecropped.png" class="card-img" alt="profile" width="150px" height="150px">
+              <img src="Gamer.jpg" class="card-img" alt="profile" width="150px" height="150px">
               <div class="card-img-overlay">
               </div>
             </div>
